# fastapi-template

./: .env.example  .gitignore  Makefile  README.md  changelog.md  pyproject.toml  pytest.ini  ruff.toml  schema.drawio
scripts/mongodb/: onboard.py
src/: main.py
src/config/: environments.py  mail_config.py  model_permissions.py  permissions.py  settings.py
src/core/exceptions/: client_exception.py  resource.py  token_exception.py
src/core/logger/: context.py  log.py  spans.py
src/core/middlewares/: logger.py
src/core/security/: get_current_user.py
src/core/utils/: encryption.py  mail.py  time.py
src/db/: __init__.py  collections.py
src/db/query/: roles.py  users.py
src/models/: common.py  role.py  token.py  user.py
src/services/: router.py
src/services/auth_service/router/: router.py
src/services/role_service/router/: router.py
src/services/user_service/router/: router.py
src/tags/: tags.py
src/tests/: test_root.py
src/tests/routers/: conftest.py  test_auth_router.py  test_role_router.py  test_user_router.py
src/tests/utils/: routers.py
